--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -271,6 +271,11 @@ h2.background span{
     width:20%!important;
     padding: 0 20px;
 }
+@media (max-width:700px){
+    .options .col.s6{
+        width:100%!important
+    }
+}
 @media only screen and (max-width:1024px){
     .newProductShowcase .col.s2{
         width:33%!important;
@@ -280,6 +285,20 @@ h2.background span{
 @media only screen and (max-width:700px){
     .newProductShowcase .col.s2{
         width:50%!important;
+       
+    }
+    .mainProductDiv .imgContain{
+        width:100%!important
+    }
+    .mainProductDiv .productDetail{
+        font-size:80%;
+        width:100%!important;
+        margin-top:30px
+    }
+}
+@media (max-width:500px){
+    .newProductShowcase .col.s2{
+        width:100%!important;
        
     }
 }
